RESOLVED FIXED167684
ld: warning: instance method '_setAutofilled:' in category conflicts with same method from another category
https://bugs.webkit.org/show_bug.cgi?id=167684
Summary ld: warning: instance method '_setAutofilled:' in category conflicts with sam...
Joseph Pecoraro
Reported 2017-01-31 21:12:08 PST
When building for iOS I see a linker warning: ld: warning: instance method '_setAutofilled:' in category from /Build/WebKit.build/Release-iphoneos/WebKitLegacy.build/Objects-normal/arm64/DOMHTML.o conflicts with same method from another category It looks like the same DOMHTMLInputElement extension appears in two places. Lets unify.
Attachments
[PATCH] Proposed Fix (3.49 KB, patch)
2017-01-31 21:20 PST, Joseph Pecoraro
mitz: review+
Joseph Pecoraro
Comment 1 2017-01-31 21:20:16 PST
Created attachment 300298 [details] [PATCH] Proposed Fix
mitz
Comment 2 2017-01-31 21:26:13 PST
Comment on attachment 300298 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=300298&action=review > Source/WebKit/mac/DOM/DOMPrivate.h:103 > - (BOOL)_isTextField; You should update the comment above, because this isn’t used by Safari anymore.
Joseph Pecoraro
Comment 3 2017-01-31 21:36:27 PST
Note You need to log in before you can comment on or make changes to this bug.