ld: warning: instance method '_setAutofilled:' in category conflicts with same method from another category https://bugs.webkit.org/show_bug.cgi?id=167684

Reviewed by Dan Bernstein.

* DOM/DOMHTML.mm:
(-[DOMHTMLInputElement _isAutofilled]): Deleted.
(-[DOMHTMLInputElement _setAutofilled:]): Deleted.
Consolidate in the WebDOMOperationsPrivate category.

* DOM/DOMPrivate.h:
Include WebDOMOperationsPrivate header to get other DOM Private categories.

* DOM/WebDOMOperations.mm:
(-[DOMHTMLInputElement _isAutofilled]):
* DOM/WebDOMOperationsPrivate.h:
Include getter alongside the setter.

Canonical link: https://commits.webkit.org/184707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211468 268f45cc-cd09-0410-ab3c-d52691b4dbfc